# laba5sk

./: CMakeLists.txt  README.md  download
.github/workflows/: ci.yml
banking/: Account.cpp  Account.hpp  CMakeLists.txt  Transaction.cpp  Transaction.hpp
tests/: mock_account.hpp  test_account.cpp  test_transaction.cpp
